corrected about spacing

--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -3,18 +3,9 @@
     border-bottom: 1px solid #ddd;
     margin-top: 10px;
     padding-bottom: 30px;
-    margin-bottom: 20px;
+    margin-bottom: 48px;/*20px;*/
     padding-top: 30px; 
     padding-bottom: 40px; 
-}
-.about-title h2 {
-    font-family: 'Quicksand', sans-serif;
-    font-size: 30px;
-    line-height: 2;
-    font-weight: 300;
-    letter-spacing: normal;
-    margin-bottom: 20px;
-    color: #4f4f4f;
 }
 .about-photo img {
     width: 100%;
